Organização do Notebook

--- a/perfilEleitorado.ipynb
+++ b/perfilEleitorado.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PERFIL DO ELEITORADO "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -13,12 +20,20 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "sns.set()\n",
-    "% matplotlib inline"
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Organização do DataFrame\n",
+    "Filtragem dos dados para pegar apenas o RN, retirando os possíveis dados nulos."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +45,20 @@
     "\n",
     "df2012 = df2012[df2012.UF == 'RN'][['MUNICIPIO', 'NR_ZONA', 'SEXO',\n",
     "                                    'FAIXA_ETARIA', 'GRAU_ESCOLARIDADE',\n",
-    "                                    'QTE_ELEITORES_PERFIL']]"
+    "                                    'QTE_ELEITORES_PERFIL']]\n",
+    "df2012 = df2012.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Análise de 2012"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +67,7 @@
        "MUNICIPIO\nACARI                       9711\nAFONSO BEZERRA              9592\nALEXANDRIA                  9754\nALMINO AFONSO               4965\nALTO DO RODRIGUES          10363\nANGICOS                     9391\nANTÔNIO MARTINS             5891\nAPODI                      28066\nAREIA BRANCA               19876\nARÊS                       10200\nASSÚ                       40518\nBARAÚNA                    17792\nBARCELONA                   4336\nBAÍA FORMOSA                7398\nBENTO FERNANDES             4564\nBOA SAÚDE                   7984\nBODÓ                        3012\nBOM JESUS                   6854\nBREJINHO                    9472\nCAICÓ                      44403\nCAIÇARA DO NORTE            5154\nCAIÇARA DO RIO DO VENTO     3456\nCAMPO GRANDE                8279\nCAMPO REDONDO               7849\nCANGUARETAMA               23818\nCARAÚBAS                   16830\nCARNAUBAIS                  8933\nCARNAÚBA DOS DANTAS         5980\nCEARÁ-MIRIM                50034\nCERRO CORÁ                  8586\n                           ...  \nSÃO JOSÉ DE MIPIBU         25977\nSÃO JOSÉ DO CAMPESTRE      10461\nSÃO JOSÉ DO SERIDÓ          3955\nSÃO JOÃO DO SABUGI          5351\nSÃO MIGUEL                 18839\nSÃO MIGUEL DO GOSTOSO       7357\nSÃO PAULO DO POTENGI       13693\nSÃO PEDRO                   5782\nSÃO RAFAEL                  7281\nSÃO TOMÉ                    8851\nSÃO VICENTE                 5056\nSÍTIO NOVO                  5187\nTABOLEIRO GRANDE            2376\nTAIPU                       9841\nTANGARÁ                    12334\nTENENTE ANANIAS             8125\nTENENTE LAURENTINO CRUZ     4770\nTIBAU                       4119\nTIBAU DO SUL               10188\nTIMBAÚBA DOS BATISTAS       2213\nTOUROS                     22944\nTRIUNFO POTIGUAR            3920\nUMARIZAL                    9220\nUPANEMA                    10310\nVENHA-VER                   3677\nVERA CRUZ                   9186\nVILA FLOR                   2532\nVIÇOSA                      1691\nVÁRZEA                      5341\nÁGUA NOVA                   2527\nName: QTE_ELEITORES_PERFIL, Length: 167, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,6 +133,11 @@
     "grau_esc_df2012 = df2012.groupby('GRAU_ESCOLARIDADE')['QTE_ELEITORES_PERFIL'].sum()\n",
     "grau_esc_df2012"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -207,6 +235,13 @@
    "source": [
     "grau_esc_df2016 = df2016.groupby('GRAU_ESCOLARIDADE')['QTE_ELEITORES_PERFIL'].sum()\n",
     "grau_esc_df2016"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Consolidação dos dados analisados"
    ]
   },
   {
