Organização do Notebook

--- a/perfilEleitorado.ipynb
+++ b/perfilEleitorado.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "MUNICIPIO\nACARI                       9711\nAFONSO BEZERRA              9592\nALEXANDRIA                  9754\nALMINO AFONSO               4965\nALTO DO RODRIGUES          10363\nANGICOS                     9391\nANTÔNIO MARTINS             5891\nAPODI                      28066\nAREIA BRANCA               19876\nARÊS                       10200\nASSÚ                       40518\nBARAÚNA                    17792\nBARCELONA                   4336\nBAÍA FORMOSA                7398\nBENTO FERNANDES             4564\nBOA SAÚDE                   7984\nBODÓ                        3012\nBOM JESUS                   6854\nBREJINHO                    9472\nCAICÓ                      44403\nCAIÇARA DO NORTE            5154\nCAIÇARA DO RIO DO VENTO     3456\nCAMPO GRANDE                8279\nCAMPO REDONDO               7849\nCANGUARETAMA               23818\nCARAÚBAS                   16830\nCARNAUBAIS                  8933\nCARNAÚBA DOS DANTAS         5980\nCEARÁ-MIRIM                50034\nCERRO CORÁ                  8586\n                           ...  \nSÃO JOSÉ DE MIPIBU         25977\nSÃO JOSÉ DO CAMPESTRE      10461\nSÃO JOSÉ DO SERIDÓ          3955\nSÃO JOÃO DO SABUGI          5351\nSÃO MIGUEL                 18839\nSÃO MIGUEL DO GOSTOSO       7357\nSÃO PAULO DO POTENGI       13693\nSÃO PEDRO                   5782\nSÃO RAFAEL                  7281\nSÃO TOMÉ                    8851\nSÃO VICENTE                 5056\nSÍTIO NOVO                  5187\nTABOLEIRO GRANDE            2376\nTAIPU                       9841\nTANGARÁ                    12334\nTENENTE ANANIAS             8125\nTENENTE LAURENTINO CRUZ     4770\nTIBAU                       4119\nTIBAU DO SUL               10188\nTIMBAÚBA DOS BATISTAS       2213\nTOUROS                     22944\nTRIUNFO POTIGUAR            3920\nUMARIZAL                    9220\nUPANEMA                    10310\nVENHA-VER                   3677\nVERA CRUZ                   9186\nVILA FLOR                   2532\nVIÇOSA                      1691\nVÁRZEA                      5341\nÁGUA NOVA                   2527\nName: QTE_ELEITORES_PERFIL, Length: 167, dtype: int64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "GRAU_ESCOLARIDADE\nANALFABETO                       197610\nENSINO FUNDAMENTAL COMPLETO      114909\nENSINO FUNDAMENTAL INCOMPLETO    770492\nENSINO MÉDIO COMPLETO            278339\nENSINO MÉDIO INCOMPLETO          417584\nLÊ E ESCREVE                     455401\nNÃO INFORMADO                      1910\nSUPERIOR COMPLETO                 69298\nSUPERIOR INCOMPLETO               49996\nName: QTE_ELEITORES_PERFIL, dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,11 +137,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Analise de 2016"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +166,7 @@
        "MUNICIPIO\nACARI                       9706\nAFONSO BEZERRA              9095\nALEXANDRIA                 10683\nALMINO AFONSO               4833\nALTO DO RODRIGUES          10589\nANGICOS                     9764\nANTÔNIO MARTINS             5972\nAPODI                      29033\nAREIA BRANCA               20157\nARÊS                       11152\nASSÚ                       40798\nBARAÚNA                    18621\nBARCELONA                   4368\nBAÍA FORMOSA                6518\nBENTO FERNANDES             4919\nBOA SAÚDE                   7781\nBODÓ                        3214\nBOM JESUS                   7563\nBREJINHO                    9337\nCAICÓ                      41480\nCAIÇARA DO NORTE            5374\nCAIÇARA DO RIO DO VENTO     3917\nCAMPO GRANDE                8473\nCAMPO REDONDO               8168\nCANGUARETAMA               22173\nCARAÚBAS                   17888\nCARNAUBAIS                  8445\nCARNAÚBA DOS DANTAS         6026\nCEARÁ-MIRIM                47223\nCERRO CORÁ                  8771\n                           ...  \nSÃO JOSÉ DE MIPIBU         29140\nSÃO JOSÉ DO CAMPESTRE      10640\nSÃO JOSÉ DO SERIDÓ          4127\nSÃO JOÃO DO SABUGI          5448\nSÃO MIGUEL                 19134\nSÃO MIGUEL DO GOSTOSO       8015\nSÃO PAULO DO POTENGI       13889\nSÃO PEDRO                   6258\nSÃO RAFAEL                  7580\nSÃO TOMÉ                    9182\nSÃO VICENTE                 5187\nSÍTIO NOVO                  5035\nTABOLEIRO GRANDE            2719\nTAIPU                      10678\nTANGARÁ                    12347\nTENENTE ANANIAS             8147\nTENENTE LAURENTINO CRUZ     4912\nTIBAU                       4597\nTIBAU DO SUL                9993\nTIMBAÚBA DOS BATISTAS       2447\nTOUROS                     25392\nTRIUNFO POTIGUAR            4076\nUMARIZAL                    9162\nUPANEMA                    11025\nVENHA-VER                   3993\nVERA CRUZ                   9506\nVILA FLOR                   2582\nVIÇOSA                      1832\nVÁRZEA                      5156\nÁGUA NOVA                   2500\nName: QTE_ELEITORES_PERFIL, Length: 167, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +187,7 @@
        "SEXO\nFEMININO         1262413\nMASCULINO        1139158\nNÃO INFORMADO        300\nName: QTE_ELEITORES_PERFIL, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +208,7 @@
        "FAIXA_ETARIA\n16 ANOS                22578\n17 ANOS                33504\n18 A 20 ANOS          151272\n21 A 24 ANOS          221804\n25 A 34 ANOS          557474\n35 A 44 ANOS          475860\n45 A 59 ANOS          548319\n60 A 69 ANOS          216194\n70 A 79 ANOS          118534\nINVÁLIDA                 121\nSUPERIOR A 79 ANOS     56211\nName: QTE_ELEITORES_PERFIL, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +229,7 @@
        "GRAU_ESCOLARIDADE\nANALFABETO                       176490\nENSINO FUNDAMENTAL COMPLETO      103625\nENSINO FUNDAMENTAL INCOMPLETO    676676\nENSINO MÉDIO COMPLETO            479375\nENSINO MÉDIO INCOMPLETO          340798\nLÊ E ESCREVE                     336693\nNÃO INFORMADO                       439\nSUPERIOR COMPLETO                183339\nSUPERIOR INCOMPLETO              104436\nName: QTE_ELEITORES_PERFIL, dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
